Fixed scaling on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ hr {
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
     .contents {
-        max-width: 95%;
+        max-width: 75%;
         margin: auto;
     }
 }
@@ -54,7 +54,7 @@ hr {
 /* Media Query for low resolution  Tablets, Ipads */
 @media (min-width: 481px) and (max-width: 767px) {
     .contents {
-        max-width: 90%;
+        max-width: 65%;
         margin: auto;
     }
 }
@@ -62,7 +62,7 @@ hr {
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px){
     .contents {
-        max-width: 75%;
+        max-width: 55%;
         margin: auto;
     }
 }
@@ -70,7 +70,7 @@ hr {
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px){
     .contents {
-        max-width: 70%;
+        max-width: 45%;
         margin: auto;
     }
 }
@@ -78,7 +78,7 @@ hr {
 /* Media Query for Large screens */
 @media (min-width: 1281px) {
     .contents {
-        max-width: 40%;
+        max-width: 35%;
         margin: auto;
     }
 }
